--- a/node/express-prisma-typescript/package.json
+++ b/node/express-prisma-typescript/package.json
@@ -48,7 +48,7 @@
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
     "pretty-quick": "^3.1.3",
-    "prisma": "^4.9.0",
+    "prisma": "^4.16.2",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.1.2",
@@ -58,5 +58,6 @@
     "hooks": {
       "pre-commit": "eslint --fix && pretty-quick --staged"
     }
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
