--- a/node/express-prisma-typescript/package.json
+++ b/node/express-prisma-typescript/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "prod": "yarn db:migrate && node dist/server.js",
-    "dev": "yarn db:migrate && yarn db:generate && nodemon -q",
+    "dev": "yarn db:migrate && yarn db:generate && nodemon -L",
     "lint": "eslint --fix && pretty-quick && prisma format",
     "db:migrate": "prisma migrate deploy",
     "db:make-migrations": "prisma migrate dev",
@@ -44,6 +44,7 @@
     "@types/signale": "^1.4.4",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui": "^3.52.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.49.0",
     "eslint-config-standard-with-typescript": "^31.0.0",
