--- a/node/express-prisma-typescript/package.json
+++ b/node/express-prisma-typescript/package.json
@@ -13,7 +13,10 @@
     "db:generate": "prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.744.0",
+    "@aws-sdk/s3-request-presigner": "^3.744.0",
     "@prisma/client": "^4.9.0",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
